// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Speed dial can restart round: restart confirmation dialog 1`] = `
Object {
  "confirmMessage": "Restart round",
  "infoMessage": "This will reset the current round progress for all players. The first player will start the current round again in a new location.",
  "onCancelCallback": [Function],
  "onConfirmCallback": [Function],
  "title": "Restart round?",
}
`;

exports[`Speed dial has home navigation: home confirmation dialog 1`] = `
Object {
  "confirmMessage": "Abort game",
  "infoMessage": "This will reset the current game",
  "onCancelCallback": [Function],
  "onConfirmCallback": [Function],
  "title": "Abort the game and return home?",
}
`;
